@@ -1,3 +1,9 @@
+2001-08-09  Elliot Glaysher  <eglayshe@umich.edu>
+
+	* Netcomics/Factory.pm (new): Have you ever noticed how changing one
+	line of code can affect the whole program? FINALLY fixed import of
+	comics with multiple images.
+
 2001-08-08  Elliot Glaysher  <eglayshe@umich.edu>
 
 	* Netcomics/Factory.pm (new): Fixed implimentation of import that I did
